# geo-rt-index

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Untitled-1.sh  cuspatial_runner.py  generator  generator.py  lazy_bs_script.sh  main.py  make_queries.py  new_gen.py  newgen_script.sh  nvidia-smi-query.txt  partial_overlap_gen.py  pytypes.py  runner.py  sanity_check.py  visualizer.py  vm_setup.sh
include/: configuration.hpp  cuda_helpers.cuh  kernel.cuh  launch_parameters.hpp  optix_helpers.cuh  optix_pipeline.hpp  optix_wrapper.hpp  types.hpp
include/factories/: aabb_factory.hpp  curve_factory.hpp  factory.hpp  point_factory.hpp  pta_factory.hpp  triangle_input_factory.hpp
include/helpers/: argparser.hpp  cuda_buffer.hpp  cuda_helpers.cuh  data_loader.hpp  debug_helpers.hpp  exception.hpp  general.hpp  global_state.hpp  input_generator.hpp  optix_helpers.cuh  optix_pipeline.hpp  optix_wrapper.hpp  point_sort.hpp  pretty_printers.hpp  spatial_helpers.cuh  time.hpp
include/types/: aabb.hpp  point.hpp  point_sorting.hpp
queries/normal/r-11/: 1.json  10.json  2.json  20.json  5.json
queries/normal/r01/: 1.json  10.json  2.json  20.json  5.json
queries/uniform/r-11/: 1.json  10.json  2.json  20.json  5.json
queries/uniform/r01/: 1.json  10.json  2.json  20.json  5.json
src/: CMakeLists.txt  device_code.cu  kernel.cu  main.cu  query_oracle.cpp
src/factories/: CMakeLists.txt  aabb_factory.cu  curve_factory.cu  point_factory.cu  pta_factory.cu  triangle_input_factory.cu
src/helpers/: CMakeLists.txt  argparser.cpp  data_loader.cpp  data_loader.cu  input_generator.cpp  input_generator.cu  optix_pipeline.cu  optix_wrapper.cu  point_sort.cpp
src/kd_tree/: CMakeLists.txt
src/kd_tree/cpu/: CMakeLists.txt  kdTreeMultiThread.cc
src/kd_tree/gpu/: CMakeLists.txt  Gpu.cu  KdTreeGPUsms.cu  buildKdTree.cu  removeDups.cu
src/playground/: CMakeLists.txt  cuda_VecAdd.cu  optix_AccelStructs.cu  optix_GPUContext.cu
src/quadtree/: CMakeLists.txt  cdpQuadtree.cu  quadtree.cu  quadtree_cpu.cpp  quadtree_cpu.cu  quadtree_gpu.cu
tests/: CMakeLists.txt  Catch.cmake  CatchAddTests.cmake  test.cpp
tests/generators/: aabb.cuh  point.cuh
tests/helpers/: CMakeLists.txt  input_generator.cpp
tests/helpers/input_generator/: CMakeLists.txt  input_generator.cu
tests/helpers/spatial_helpers/: CMakeLists.txt  contains.cu
